fix - ajustes finos na interna do blog

--- a/3-dicas-para-memorizar-melhor-a-materia-das-provas.html
+++ b/3-dicas-para-memorizar-melhor-a-materia-das-provas.html
@@ -51,74 +51,107 @@
     </div>
     <!-- Noticia -->
     <div class="container">
-        <div class="col-md-9 p-0">
-            <div class="article">
-                <img src="img/dicas para memorizar matéria.jpg" alt="Dicas para memorizar matéria" style="width: 769px; height: auto;">
-                <h1 class="title-article">3 dicas para memorizar melhor a matéria das provas</h1>
-                <p>Uma das maiores dificuldades dos estudantes é conseguir memorizar toda a matéria ou pelo menos a maior parte dela antes de realizar uma prova. Isso porque sabemos que, muitas vezes, a matéria é grande e o tempo é curto.</p>
-                <p>Sendo assim, existem diversos métodos utilizados para facilitar a memorização, como a famosa caneta marca texto, post it, resumos, esquemas e por aí vai. </p>
-                <em>Mas afinal, qual é a melhor estratégia para lembrar de toda a matéria na hora da prova?</em>
-                <p>Cada um se adequa melhor a uma forma de memorização. Por exemplo, alguns terão mais facilidade se fizerem mapas mentais, outros preferem escrever diretamente no papel. Vai depender da disposição e adaptação de cada um.</p>
-                <p>No entanto, o nosso time listou 3 dicas que, independente das estratégias de preferência de cada um, podem ajudar  a memorizar melhor a matéria das provas. Confira abaixo:</p>
-                <h2>1. Dica dois em um: leia em voz ALTA!</h2>
-                <p>Ler a matéria em voz alta pode ser um exercício chato e cansativo para muitas pessoas. No entanto, é fundamental e poderá te ajudar bastante! Isso porque você será capaz de realizar dois métodos de memorização ao mesmo tempo: a leitura e a audição.</p>
-                <p>Além disso, ao realizar essa estratégia, é possível melhorar o foco e a concentração e diminuir a distração, uma vez que ler em voz alta impede, na maioria das vezes, a dispersão dos pensamentos.</p>
-                <p>Aproveite para ler o nosso artigo sobre como focar melhor nos estudos <a href="#">clicando aqui.</a></p>
-                <h2>2. Dica dia a dia: associe os conteúdos a fatos vivenciados no dia a dia</h2>
-                <p>A melhor forma de aprender um conteúdo é associá-lo a algo que já sabemos, uma vez que o cérebro possui maior facilidade em assimilar as informações quando isso ocorre. Sendo assim, procure sempre aplicar a matéria aprendida em alguma situação vivenciada no seu dia a dia. Isso ajudará você, inclusive, a entender o porquê de estar estudando o referido conteúdo.</p>
-                <h2>3. Dica take a break: descanse...</h2>
-                <p>Isso mesmo que você leu: descanse! De nada adiantará virar noites e noites tentando memorizar toda a matéria para a prova, realizando esforços constantes e intensos, se você não tiver boas noites de sono e descanso.</p>
-                <p>É fundamental realizar pausas durante o período de estudo para que o rendimento não seja prejudicado. Sendo assim, quando o seu corpo pedir um descanso ou quando o cérebro não estiver conseguindo absorver mais nada, não force a barra, ok?</p>
-                <p>Conforme exposto, portanto, pudemos perceber que um dos grandes desafios enfrentados pelos estudantes é memorizar a matéria para as provas. São diversos conteúdos cobrados em um tempo curto de aprendizado, o que preocupa muitos estudantes. </p>
-                <p>Sendo assim, é essencial investir em métodos práticos e que facilitem a memorização da matéria, de acordo com as preferências e adaptações de cada um.</p>
-                <p>Gostou das nossas dicas? Continue acompanhando o nosso blog! Cadastre o seu e-mail no campo abaixo e receba as nossas atualizações de conteúdo!</p>
+        <div class="row">
+            <div class="col-md-8">
+                <div class="article">
+                    <img src="img/dicas para memorizar matéria.jpg" alt="Dicas para memorizar matéria">
+                    <h1 class="title-article">3 dicas para memorizar melhor a matéria das provas</h1>
+                    <p>Uma das maiores dificuldades dos estudantes é conseguir memorizar toda a matéria ou pelo menos a maior parte dela antes de realizar uma prova. Isso porque sabemos que, muitas vezes, a matéria é grande e o tempo é curto.</p>
+                    <p>Sendo assim, existem diversos métodos utilizados para facilitar a memorização, como a famosa caneta marca texto, post it, resumos, esquemas e por aí vai. </p>
+                    <em>Mas afinal, qual é a melhor estratégia para lembrar de toda a matéria na hora da prova?</em>
+                    <p>Cada um se adequa melhor a uma forma de memorização. Por exemplo, alguns terão mais facilidade se fizerem mapas mentais, outros preferem escrever diretamente no papel. Vai depender da disposição e adaptação de cada um.</p>
+                    <p>No entanto, o nosso time listou 3 dicas que, independente das estratégias de preferência de cada um, podem ajudar  a memorizar melhor a matéria das provas. Confira abaixo:</p>
+                    <h2>1. Dica dois em um: leia em voz ALTA!</h2>
+                    <p>Ler a matéria em voz alta pode ser um exercício chato e cansativo para muitas pessoas. No entanto, é fundamental e poderá te ajudar bastante! Isso porque você será capaz de realizar dois métodos de memorização ao mesmo tempo: a leitura e a audição.</p>
+                    <p>Além disso, ao realizar essa estratégia, é possível melhorar o foco e a concentração e diminuir a distração, uma vez que ler em voz alta impede, na maioria das vezes, a dispersão dos pensamentos.</p>
+                    <p>Aproveite para ler o nosso artigo sobre como focar melhor nos estudos <a href="#">clicando aqui.</a></p>
+                    <h2>2. Dica dia a dia: associe os conteúdos a fatos vivenciados no dia a dia</h2>
+                    <p>A melhor forma de aprender um conteúdo é associá-lo a algo que já sabemos, uma vez que o cérebro possui maior facilidade em assimilar as informações quando isso ocorre. Sendo assim, procure sempre aplicar a matéria aprendida em alguma situação vivenciada no seu dia a dia. Isso ajudará você, inclusive, a entender o porquê de estar estudando o referido conteúdo.</p>
+                    <h2>3. Dica take a break: descanse...</h2>
+                    <p>Isso mesmo que você leu: descanse! De nada adiantará virar noites e noites tentando memorizar toda a matéria para a prova, realizando esforços constantes e intensos, se você não tiver boas noites de sono e descanso.</p>
+                    <p>É fundamental realizar pausas durante o período de estudo para que o rendimento não seja prejudicado. Sendo assim, quando o seu corpo pedir um descanso ou quando o cérebro não estiver conseguindo absorver mais nada, não force a barra, ok?</p>
+                    <p>Conforme exposto, portanto, pudemos perceber que um dos grandes desafios enfrentados pelos estudantes é memorizar a matéria para as provas. São diversos conteúdos cobrados em um tempo curto de aprendizado, o que preocupa muitos estudantes. </p>
+                    <p>Sendo assim, é essencial investir em métodos práticos e que facilitem a memorização da matéria, de acordo com as preferências e adaptações de cada um.</p>
+                    <p>Gostou das nossas dicas? Fale com a gente pelo formulário abaixo! Adoramos sugestões, tirar dúvidas ou até mesmo bater um papo :)</p>
+                </div>
             </div>
-            <!-- <div class="news-cad" style="background-image: url('../../../img/bg-rocket.png');">
-
-            </div> -->
+            <!-- Card newsletter -->
+            <div class="col-xs-12 col-sm-12 col-md-4">
+                <div class="card-interna">
+                    <div class="card-header">
+                        <h5 class="title-card">Baixe gratuitamente o nosso Ciclo de Estudos e organize melhor o seu tempo!</h5>
+                    </div>
+                    <div class="card-body">
+                        <form name="newsLateral" action="POST" data-netlify="true">
+                            <input name="nome" class="w-100" type="text" placeholder="Nome completo" required>
+                            <input name="email" class="w-100" type="email" placeholder="E-mail" required>
+                            <button type="submit" onclick="downloadMaterial();">EU QUERO!</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-9">
+                <div class="news-bg">
+                    <div class="news-header">
+                        <h5 class="title-news">Vamos trocar uma ideia?<br /> Entre em contato com a gente!</h5>
+                    </div>
+                    <div class="news-body">
+                        <form name="newsLateral" action="POST" data-netlify="true">
+                            <input name="nome" type="text" placeholder="Nome completo" required>
+                            <input name="email" type="email" placeholder="E-mail" required>
+                            <input name="mensagem" type="text" placeholder="Mensagem" required>
+                            <button type="submit" onclick="downloadMaterial();">EU QUERO!</button>
+                            <!-- <span class="aviso">Ao fornecer o seu e-mail, você concordará em receber conteúdo</span> -->
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Footer -->
     <footer class="container-fluid bg-rodape">
-            <!-- <hr/> -->
-            <div class="container py-5">
-                <div class="row">
+        <!-- <hr/> -->
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-md-3">
                     <div class="col-md-3">
-                        <div class="col-md-3">
-                            <img src="img/logoBranca.png" alt="Logo Próximo Semestre">
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <h5 class="text-light align-midle">Categorias</h5>
-                        <ul class="text-light p-0">
-                            <li class="text-light"><a href="#" class="text-light">Dicas de Estudo</a></li>
-                            <li class="text-light"><a href="#" class="text-light">Carreira</a></li>
-                            <li class="text-light"><a href="#" class="text-light">Crédito Estudantil</a></li>
-                            <li class="text-light"><a href="#" class="text-light">ENEM 2019</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h5 class="text-light">Não perca nada!</h5>
-                        <span class="subtitle">Insira aqui o seu nome completo e-mail e receba gratuitamente todas as atualizações do nosso blog!</span>
-                        <div class="search-footer d-flex align-items-center">
-                            <form name="news-footer" method="POST" data-netlify="true">
-                                <input type="text" class="w-100"  name="nome" placeholder="Nome completo" required>
-                                <input type="email" class="w-100" name="email" placeholder="Seu e-mail" required>
-                                <input type="submit" class="w-100" value="ASSINAR">
-                            </form>         
-                        </div>
-                    </div>
-                    <div class="offset-md-1 col-md-2">
-                        <h5 class="text-light">Redes Sociais</h5>
-                        <a href="https://www.instagram.com/proximosemestre/" target="_blank"><img src="img/instagram.png" alt="Logo Instagram" style="width: 25px; height: auto;"></a>
-                        <a href="https://twitter.com/ProximoSemestr" target="_blank"><img src="img/twitter.png" alt="Logo twitter" style="width: 25px; height: auto;"></a>
+                        <img src="img/logoBranca.png" alt="Logo Próximo Semestre">
                     </div>
                 </div>
+                <div class="col-md-2">
+                    <h5 class="text-light align-midle">Categorias</h5>
+                    <ul class="text-light p-0">
+                        <li class="text-light"><a href="#" class="text-light">Dicas de Estudo</a></li>
+                        <li class="text-light"><a href="#" class="text-light">Carreira</a></li>
+                        <li class="text-light"><a href="#" class="text-light">Crédito Estudantil</a></li>
+                        <li class="text-light"><a href="#" class="text-light">ENEM 2019</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5 class="text-light">Vamos trocar uma ideia?<br />Entre em contato com a gente!</h5>
+                    <div class="search-footer d-flex align-items-center">
+                        <form name="news-footer" method="POST" data-netlify="true">
+                            <input type="text" class="w-100"  name="nome" placeholder="Nome completo" required>
+                            <input type="email" class="w-100" name="email" placeholder="Seu e-mail" required>
+                            <input type="text" class="w-100"  name="mensagem" placeholder="Mensagem" required>
+                            <input type="submit" value="ENVIAR">
+                            <span class="alert-news">Ao fornecer o seu e-mail, você concordará em receber conteúdo</span>
+                        </form>         
+                    </div>
+                </div>
+                <div class="offset-md-1 col-md-2">
+                    <h5 class="text-light">Redes Sociais</h5>
+                    <a href="https://www.instagram.com/proximosemestre/" target="_blank"><img src="img/instagram.png" alt="Logo Instagram" style="width: 25px; height: auto;"></a>
+                    <a href="https://twitter.com/ProximoSemestr" target="_blank"><img src="img/twitter.png" alt="Logo twitter" style="width: 25px; height: auto;"></a>
+                </div>
             </div>
-        </footer>
+        </div>
+    </footer>
         <!-- JS Bootstrap -->
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     </body>
-    </html>
+</html>
