--- a/dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html
+++ b/dicas-praticas-para-conciliar-uma-rotina-de-estudos-e-trabalho.html
@@ -51,90 +51,123 @@
     </div>
     <!-- Noticia -->
     <div class="container">
-        <div class="col-md-9 p-0">
-            <div class="article">
-                <img src="img/como conciliar trabalho e estudos.jpg" alt="Dicas para memorizar matéria" style="width: 769px; height: auto;">
-                <h1 class="title-article">DICAS PRÁTICAS PARA CONCILIAR UMA ROTINA DE ESTUDOS E TRABALHO</h1>
-                <p>Conciliar estudos e trabalho não é exatamente a coisa mais simples de se fazer, correto?
-                        O dia a dia é cansativo e é comum o sentimento de não estar fazendo o suficiente nem no trabalho nem na faculdade, mesmo se esforçando muito. Sendo assim, é essencial contar com um planejamento eficiente.
-                </p>
-                <p>Confira <a href="#">aqui</a> o nosso artigo sobre planejamento de estudos!</p>
-                <p>Bom, a boa notícia é separamos algumas dicas para deixar a sua rotina um pouco mais fácil! Aqui vão elas:</p>
-                <h2>1. CONTE COM UMA AJUDINHA DIGITAL</h2>
-                <p>Você sabia que existem vários aplicativos que podem te ajudar a levar uma vida mais organizada e ainda dar aquela forcinha nos estudos? Selecionamos alguns para você:</p>
-                <h3>1.1 ATRACKER</h3>
-                <p>O ATracker(http://www.wonderapps.se/ATracker/home.html) é um aplicativo que vai te ajudar a organizar a sua rotina para as atividades habituais. 
-                        Você tem que estar na faculdade todos os dias? Vai à academia duas vezes por semana? Faxina a casa quantas vezes? Tem que sair para passear com o cachorro? Buscar seu filho(a) na escola? Com o aplicativo, você pode adicionar 05 atividades no modo gratuito e montar a sua rotina do melhor jeito para você! Além disso, ele te dará um relatório em formato de gráfico mostrando quantas horas de atividade você teve e até como seu dia de tarefas foi dividido.
-                </p>
-                <h3>1.2 TRELLO</h3>
-                <p>Você acumulou muitas atividades? Trabalho de faculdade, provas, metas para bater no trabalho? O Trello (https://trello.com/) vai te ajudar a organizar melhor todas essas responsabilidades. Você pode estabelecer prazos para suas atividades, adicionar uma lista de afazeres e até incluir pessoas que dividem a mesma responsabilidade com você! Facilita muito nos trabalhos em grupo da faculdade! 
-                        Organização é o segredo para maior produtividade!
-                </p>
-                <h3>1.3 DUOLINGO</h3>
-                <p>E aquele sonho de aprender inglês ou outra língua para ter uma chance maior de conseguir aquele emprego bacana? Estudando e trabalhando parece que não sobra tempo, mas o Duolingo (https://pt.duolingo.com/) pode te ajudar a estudar uma nova língua no tempinho que sobra! 
-                        Você pode interagir com o aplicativo por um curto período de tempo por dia, 15 minutos, por exemplo, e aos poucos ir melhorando seu nível de conhecimento na língua escolhida! Que tal aprender uma nova língua enquanto volta para casa no ônibus?
-                </p>
-                <h2>2. TENHA MOMENTOS DE LAZER SEM CULPA</h2>
-                <p>Ter um tempo para descansar é essencial! Tente organizar sua agenda para ter um momento de descanso que sirva para te reabastecer de energia! Estar com as tarefas organizadas e em dia te ajuda a curtir esse momento sem culpa e reiniciar a sua jornada com mais vontade!</p>
-                <em>Momentos de lazer ajudam, inclusive, na memorização de conteúdos. Confira <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html">aqui</a>o nosso artigo sobre!</em>
-                <h2>3. TRACE SUAS METAS</h2>
-                <p>Você se lembra qual objetivo de vida te fez encarar essa rotina apertada? Pois é, às vezes a loucura é tanta que até nos esquecemos o que nos impulsionou a encarar tantos desafios! 
-                        Por isso, faça uma lista com todos os motivos que você tem para estar se esforçando tanto e trace objetivos, metas claras para um futuro próximo. Exemplo de objetivos: finalizar o semestre da faculdade com médias acima de 8; iniciar pesquisa para tema de TCC até outubro; pesquisar ao menos 04 bibliografias que possam servir ao meu tema de TCC até novembro. 
-                        Com metas claras e de curto e médio prazo traçadas, você consegue vibrar com cada conquista, além de ver o seu crescimento pessoal de forma mais fácil!
-                </p>
-                <h2>4. FIQUE DE OLHO NAS FINANÇAS!</h2>
-                <p>Como andam as finanças? Você faz um balanço mensal das suas economias? Sabe quanto entra e quanto sai da sua conta? Quanto mais controle você tiver sobre a sua situação financeira, menor a chance de ter o dinheiro como um empecilho para conquistar seus objetivos! 
-                        Mas você deve estar pensando: esse artigo deveria simplificar as coisas e você sugere mais uma tarefa para minha rotina? Pode parecer chato e cansativo, mas eu garanto que ter essa parte da sua vida organizada vai reduzir consideravelmente a energia gasta com problemas. 
-                        Então, vale muito a pena conhecer alternativas que podem te ajudar nesse ponto, desde aplicativos que fazem o trabalho de levantar seus gastos mensais para você até empresas que trabalham com crédito estudantil. O que não vale é perder o foco dos estudos!  
-                </p>
-                <p>Gostou das nossas dicas? Continue acompanhando o nosso blog! Cadastre o seu nome completo e e-mail no campo abaixo e receba as nossas atualizações de conteúdo!</p>
+        <div class="row">
+            <div class="col-md-8">
+                <div class="article">
+                    <img src="img/como conciliar trabalho e estudos.jpg" alt="Dicas para memorizar matéria">
+                    <h1 class="title-article">DICAS PRÁTICAS PARA CONCILIAR UMA ROTINA DE ESTUDOS E TRABALHO</h1>
+                    <p>Conciliar estudos e trabalho não é exatamente a coisa mais simples de se fazer, correto?
+                            O dia a dia é cansativo e é comum o sentimento de não estar fazendo o suficiente nem no trabalho nem na faculdade, mesmo se esforçando muito. Sendo assim, é essencial contar com um planejamento eficiente.
+                    </p>
+                    <p>Confira <a href="#">aqui</a> o nosso artigo sobre planejamento de estudos!</p>
+                    <p>Bom, a boa notícia é separamos algumas dicas para deixar a sua rotina um pouco mais fácil! Aqui vão elas:</p>
+                    <h2>1. CONTE COM UMA AJUDINHA DIGITAL</h2>
+                    <p>Você sabia que existem vários aplicativos que podem te ajudar a levar uma vida mais organizada e ainda dar aquela forcinha nos estudos? Selecionamos alguns para você:</p>
+                    <h3>1.1 ATRACKER</h3>
+                    <p>O ATracker(http://www.wonderapps.se/ATracker/home.html) é um aplicativo que vai te ajudar a organizar a sua rotina para as atividades habituais. 
+                            Você tem que estar na faculdade todos os dias? Vai à academia duas vezes por semana? Faxina a casa quantas vezes? Tem que sair para passear com o cachorro? Buscar seu filho(a) na escola? Com o aplicativo, você pode adicionar 05 atividades no modo gratuito e montar a sua rotina do melhor jeito para você! Além disso, ele te dará um relatório em formato de gráfico mostrando quantas horas de atividade você teve e até como seu dia de tarefas foi dividido.
+                    </p>
+                    <h3>1.2 TRELLO</h3>
+                    <p>Você acumulou muitas atividades? Trabalho de faculdade, provas, metas para bater no trabalho? O Trello (https://trello.com/) vai te ajudar a organizar melhor todas essas responsabilidades. Você pode estabelecer prazos para suas atividades, adicionar uma lista de afazeres e até incluir pessoas que dividem a mesma responsabilidade com você! Facilita muito nos trabalhos em grupo da faculdade! 
+                            Organização é o segredo para maior produtividade!
+                    </p>
+                    <h3>1.3 DUOLINGO</h3>
+                    <p>E aquele sonho de aprender inglês ou outra língua para ter uma chance maior de conseguir aquele emprego bacana? Estudando e trabalhando parece que não sobra tempo, mas o Duolingo (https://pt.duolingo.com/) pode te ajudar a estudar uma nova língua no tempinho que sobra! 
+                            Você pode interagir com o aplicativo por um curto período de tempo por dia, 15 minutos, por exemplo, e aos poucos ir melhorando seu nível de conhecimento na língua escolhida! Que tal aprender uma nova língua enquanto volta para casa no ônibus?
+                    </p>
+                    <h2>2. TENHA MOMENTOS DE LAZER SEM CULPA</h2>
+                    <p>Ter um tempo para descansar é essencial! Tente organizar sua agenda para ter um momento de descanso que sirva para te reabastecer de energia! Estar com as tarefas organizadas e em dia te ajuda a curtir esse momento sem culpa e reiniciar a sua jornada com mais vontade!</p>
+                    <em>Momentos de lazer ajudam, inclusive, na memorização de conteúdos. Confira <a href="3-dicas-para-memorizar-melhor-a-materia-das-provas.html">aqui</a>o nosso artigo sobre!</em>
+                    <h2>3. TRACE SUAS METAS</h2>
+                    <p>Você se lembra qual objetivo de vida te fez encarar essa rotina apertada? Pois é, às vezes a loucura é tanta que até nos esquecemos o que nos impulsionou a encarar tantos desafios! 
+                            Por isso, faça uma lista com todos os motivos que você tem para estar se esforçando tanto e trace objetivos, metas claras para um futuro próximo. Exemplo de objetivos: finalizar o semestre da faculdade com médias acima de 8; iniciar pesquisa para tema de TCC até outubro; pesquisar ao menos 04 bibliografias que possam servir ao meu tema de TCC até novembro. 
+                            Com metas claras e de curto e médio prazo traçadas, você consegue vibrar com cada conquista, além de ver o seu crescimento pessoal de forma mais fácil!
+                    </p>
+                    <h2>4. FIQUE DE OLHO NAS FINANÇAS!</h2>
+                    <p>Como andam as finanças? Você faz um balanço mensal das suas economias? Sabe quanto entra e quanto sai da sua conta? Quanto mais controle você tiver sobre a sua situação financeira, menor a chance de ter o dinheiro como um empecilho para conquistar seus objetivos! 
+                            Mas você deve estar pensando: esse artigo deveria simplificar as coisas e você sugere mais uma tarefa para minha rotina? Pode parecer chato e cansativo, mas eu garanto que ter essa parte da sua vida organizada vai reduzir consideravelmente a energia gasta com problemas. 
+                            Então, vale muito a pena conhecer alternativas que podem te ajudar nesse ponto, desde aplicativos que fazem o trabalho de levantar seus gastos mensais para você até empresas que trabalham com crédito estudantil. O que não vale é perder o foco dos estudos!  
+                    </p>
+                    <p>Gostou das nossas dicas? Fale com a gente pelo formulário abaixo! Adoramos sugestões, tirar dúvidas ou até mesmo bater um papo :)</p>
+                </div>
+            </div> 
+            <!-- Card newsletter -->
+            <div class="col-xs-12 col-sm-12 col-md-4">
+                <div class="card-interna">
+                    <div class="card-header">
+                        <h5 class="title-card">Baixe gratuitamente o nosso Ciclo de Estudos e organize melhor o seu tempo!</h5>
+                    </div>
+                    <div class="card-body">
+                        <form name="newsLateral" action="POST" data-netlify="true">
+                            <input name="nome" class="w-100" type="text" placeholder="Nome completo" required>
+                            <input name="email" class="w-100" type="email" placeholder="E-mail" required>
+                            <button type="submit" onclick="downloadMaterial();">EU QUERO!</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <!-- <div class="news-cad" style="background-image: url('../../../img/bg-rocket.png');">
-
-            </div> -->
+        </div>
+        <div class="row">
+            <div class="col-md-9">
+                <div class="news-bg">
+                    <div class="news-header">
+                        <h5 class="title-news">Vamos trocar uma ideia?<br /> Entre em contato com a gente!</h5>
+                    </div>
+                    <div class="news-body">
+                        <form name="newsLateral" action="POST" data-netlify="true">
+                            <input name="nome" type="text" placeholder="Nome completo" required>
+                            <input name="email" type="email" placeholder="E-mail" required>
+                            <input name="mensagem" type="text" placeholder="Mensagem" required>
+                            <button type="submit" onclick="downloadMaterial();">EU QUERO!</button>
+                            <!-- <span class="aviso">Ao fornecer o seu e-mail, você concordará em receber conteúdo</span> -->
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Footer -->
     <footer class="container-fluid bg-rodape">
-            <!-- <hr/> -->
-            <div class="container py-5">
-                <div class="row">
-                       <div class="col-md-3">
-                        <div class="col-md-3">
-                            <img src="img/logoBranca.png" alt="Logo Próximo Semestre">
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <h5 class="text-light align-midle">Categorias</h5>
-                        <ul class="text-light p-0">
-                            <li class="text-light"><a href="#" class="text-light">Dicas de Estudo</a></li>
-                            <li class="text-light"><a href="#" class="text-light">Carreira</a></li>
-                            <li class="text-light"><a href="#" class="text-light">Crédito Estudantil</a></li>
-                            <li class="text-light"><a href="#" class="text-light">ENEM 2019</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h5 class="text-light">Não perca nada!</h5>
-                        <span class="subtitle">Insira aqui o seu nome completo e-mail e receba gratuitamente todas as atualizações do nosso blog!</span>
-                        <div class="search-footer d-flex align-items-center">
-                            <form name="news-footer" method="POST" data-netlify="true">
-                                <input type="text" class="w-100"  name="nome" placeholder="Nome completo" required>
-                                <input type="email" class="w-100" name="email" placeholder="Seu e-mail" required>
-                                <input type="submit" class="w-100" value="ASSINAR">
-                            </form>         
-                        </div>
-                    </div>
-                    <div class="offset-md-1 col-md-2">
-                        <h5 class="text-light">Redes Sociais</h5>
-                        <a href="https://www.instagram.com/proximosemestre/" target="_blank"><img src="img/instagram.png" alt="Logo Instagram" style="width: 25px; height: auto;"></a>
-                        <a href="https://twitter.com/ProximoSemestr" target="_blank"><img src="img/twitter.png" alt="Logo twitter" style="width: 25px; height: auto;"></a>
+        <!-- <hr/> -->
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="col-md-3">
+                        <img src="img/logoBranca.png" alt="Logo Próximo Semestre">
                     </div>
                 </div>
+                <div class="col-md-2">
+                    <h5 class="text-light align-midle">Categorias</h5>
+                    <ul class="text-light p-0">
+                        <li class="text-light"><a href="#" class="text-light">Dicas de Estudo</a></li>
+                        <li class="text-light"><a href="#" class="text-light">Carreira</a></li>
+                        <li class="text-light"><a href="#" class="text-light">Crédito Estudantil</a></li>
+                        <li class="text-light"><a href="#" class="text-light">ENEM 2019</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5 class="text-light">Vamos trocar uma ideia?<br />Entre em contato com a gente!</h5>
+                    <div class="search-footer d-flex align-items-center">
+                        <form name="news-footer" method="POST" data-netlify="true">
+                            <input type="text" class="w-100"  name="nome" placeholder="Nome completo" required>
+                            <input type="email" class="w-100" name="email" placeholder="Seu e-mail" required>
+                            <input type="text" class="w-100"  name="mensagem" placeholder="Mensagem" required>
+                            <input type="submit" value="ENVIAR">
+                            <span class="alert-news">Ao fornecer o seu e-mail, você concordará em receber conteúdo</span>
+                        </form>         
+                    </div>
+                </div>
+                <div class="offset-md-1 col-md-2">
+                    <h5 class="text-light">Redes Sociais</h5>
+                    <a href="https://www.instagram.com/proximosemestre/" target="_blank"><img src="img/instagram.png" alt="Logo Instagram" style="width: 25px; height: auto;"></a>
+                    <a href="https://twitter.com/ProximoSemestr" target="_blank"><img src="img/twitter.png" alt="Logo twitter" style="width: 25px; height: auto;"></a>
+                </div>
             </div>
-        </footer>
+        </div>
+    </footer>
         <!-- JS Bootstrap -->
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     </body>
-    </html>
+</html>
