--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     </div>
     <!-- Pagination -->
-    <div class="container d-flex justify-content-center">
+    <!-- <div class="container d-flex justify-content-center">
         <nav aria-label="pagination nav">
             <ul class="pagination">
                 <li class="page-item"><a class="page-link" href="#">1</a></li>
@@ -134,7 +134,7 @@
                 <li class="page-item"><a class="page-link" href="#">3</a></li>
             </ul>
         </nav>
-    </div>
+    </div> -->
 
 
     <!-- Footer -->
@@ -156,18 +156,19 @@
                         <li class="text-light"><a href="#" class="text-light">ENEM 2019</a></li>
                     </ul>
                 </div>
-                <!-- <div class="col-md-4">
-                    <h5 class="text-light">Não perca nada!</h5>
-                    <span class="subtitle">Insira aqui o seu nome completo e-mail e receba gratuitamente todas as atualizações do nosso blog!</span>
+                <div class="col-md-4">
+                    <h5 class="text-light">Vamos trocar uma ideia?<br />Entre em contato com a gente!</h5>
                     <div class="search-footer d-flex align-items-center">
                         <form name="news-footer" method="POST" data-netlify="true">
                             <input type="text" class="w-100"  name="nome" placeholder="Nome completo" required>
                             <input type="email" class="w-100" name="email" placeholder="Seu e-mail" required>
-                            <input type="submit" class="w-100" value="ASSINAR">
+                            <input type="text" class="w-100"  name="mensagem" placeholder="Mensagem" required>
+                            <input type="submit" value="ENVIAR">
+                            <span class="alert-news">Ao fornecer o seu e-mail, você concordará em receber conteúdo</span>
                         </form>         
                     </div>
-                </div> -->
-                <div class="offset-md-5 col-md-2">
+                </div>
+                <div class="offset-md-1 col-md-2">
                     <h5 class="text-light">Redes Sociais</h5>
                     <a href="https://www.instagram.com/proximosemestre/" target="_blank"><img src="img/instagram.png" alt="Logo Instagram" style="width: 25px; height: auto;"></a>
                     <a href="https://twitter.com/ProximoSemestr" target="_blank"><img src="img/twitter.png" alt="Logo twitter" style="width: 25px; height: auto;"></a>
